# Multi-Agent-AI-Startup-Accelerator

./: index.html  pyproject.toml
src/startup/: backend_code.md  brand_identity.md  crew.py  final_deliverable.md  frontend_code.md  investor_pitch.md  main.py  market_research.md  product_Experience.md  startup_idea.md
src/startup/config/: agents.yaml  tasks.yaml
src/startup/instance/: projects.db
tools/: custom_tool.py  image_tool.py
