[project]
name = "startup"
version = "0.1.0"
description = "startup using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=0.59.0",
    "crewai[tools]>=0.152.0,<1.0.0",
    "pydantic>=2.11.7",
]

[project.scripts]
startup = "startup.main:run"
run_crew = "startup.main:run"
train = "startup.main:train"
replay = "startup.main:replay"
test = "startup.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
